{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 15,
  "lineage": "7de10295-c5aa-e8f4-f4fa-de66dd1ff315",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "monitor",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4e564a70-2d22-48d6-b6df-c887ab15ded8/resourceGroups/rg-capstone-yourname/providers/Microsoft.Network/networkInterfaces/nic-monitor",
            "internal_domain_name_suffix": "3cq1a1lajzge5nfxionhwgqkya.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.1.2.10",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/4e564a70-2d22-48d6-b6df-c887ab15ded8/resourceGroups/rg-capstone-yourname/providers/Microsoft.Network/publicIPAddresses/pip-monitor",
                "subnet_id": "/subscriptions/4e564a70-2d22-48d6-b6df-c887ab15ded8/resourceGroups/rg-capstone-yourname/providers/Microsoft.Network/virtualNetworks/vnet-capstone/subnets/snet-monitor"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "nic-monitor",
            "private_ip_address": "10.1.2.10",
            "private_ip_addresses": [
              "10.1.2.10"
            ],
            "resource_group_name": "rg-capstone-yourname",
            "tags": {
              "owner": "sachinb",
              "project": "capstone"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.monitor",
            "azurerm_resource_group.capstone",
            "azurerm_subnet.monitor",
            "azurerm_virtual_network.capstone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4e564a70-2d22-48d6-b6df-c887ab15ded8/resourceGroups/rg-capstone-yourname/providers/Microsoft.Network/networkInterfaces/nic-web",
            "internal_domain_name_suffix": "3cq1a1lajzge5nfxionhwgqkya.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.1.1.10",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/4e564a70-2d22-48d6-b6df-c887ab15ded8/resourceGroups/rg-capstone-yourname/providers/Microsoft.Network/publicIPAddresses/pip-web",
                "subnet_id": "/subscriptions/4e564a70-2d22-48d6-b6df-c887ab15ded8/resourceGroups/rg-capstone-yourname/providers/Microsoft.Network/virtualNetworks/vnet-capstone/subnets/snet-web"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "nic-web",
            "private_ip_address": "10.1.1.10",
            "private_ip_addresses": [
              "10.1.1.10"
            ],
            "resource_group_name": "rg-capstone-yourname",
            "tags": {
              "owner": "sachinb",
              "project": "capstone"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.web",
            "azurerm_resource_group.capstone",
            "azurerm_subnet.web",
            "azurerm_virtual_network.capstone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "monitor",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4e564a70-2d22-48d6-b6df-c887ab15ded8/resourceGroups/rg-capstone-yourname/providers/Microsoft.Network/networkSecurityGroups/nsg-monitor",
            "location": "eastus",
            "name": "nsg-monitor",
            "resource_group_name": "rg-capstone-yourname",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "owner": "sachinb",
              "project": "capstone"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.capstone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4e564a70-2d22-48d6-b6df-c887ab15ded8/resourceGroups/rg-capstone-yourname/providers/Microsoft.Network/networkSecurityGroups/nsg-web",
            "location": "eastus",
            "name": "nsg-web",
            "resource_group_name": "rg-capstone-yourname",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTPS",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "owner": "sachinb",
              "project": "capstone"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.capstone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "monitor",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/4e564a70-2d22-48d6-b6df-c887ab15ded8/resourceGroups/rg-capstone-yourname/providers/Microsoft.Network/publicIPAddresses/pip-monitor",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.188.9.247",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "pip-monitor",
            "resource_group_name": "rg-capstone-yourname",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "owner": "sachinb",
              "project": "capstone"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.capstone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/4e564a70-2d22-48d6-b6df-c887ab15ded8/resourceGroups/rg-capstone-yourname/providers/Microsoft.Network/publicIPAddresses/pip-web",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.68.147.6",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "pip-web",
            "resource_group_name": "rg-capstone-yourname",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "owner": "sachinb",
              "project": "capstone"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.capstone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "monitor",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/4e564a70-2d22-48d6-b6df-c887ab15ded8/resourceGroups/rg-capstone-yourname/providers/Microsoft.Network/virtualNetworks/vnet-capstone/subnets/snet-monitor",
            "name": "snet-monitor",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-capstone-yourname",
            "virtual_network_name": "vnet-capstone"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.capstone",
            "azurerm_virtual_network.capstone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/4e564a70-2d22-48d6-b6df-c887ab15ded8/resourceGroups/rg-capstone-yourname/providers/Microsoft.Network/virtualNetworks/vnet-capstone/subnets/snet-web",
            "name": "snet-web",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-capstone-yourname",
            "virtual_network_name": "vnet-capstone"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.capstone",
            "azurerm_virtual_network.capstone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "monitor",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4e564a70-2d22-48d6-b6df-c887ab15ded8/resourceGroups/rg-capstone-yourname/providers/Microsoft.Network/virtualNetworks/vnet-capstone/subnets/snet-monitor",
            "network_security_group_id": "/subscriptions/4e564a70-2d22-48d6-b6df-c887ab15ded8/resourceGroups/rg-capstone-yourname/providers/Microsoft.Network/networkSecurityGroups/nsg-monitor",
            "subnet_id": "/subscriptions/4e564a70-2d22-48d6-b6df-c887ab15ded8/resourceGroups/rg-capstone-yourname/providers/Microsoft.Network/virtualNetworks/vnet-capstone/subnets/snet-monitor"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.monitor",
            "azurerm_resource_group.capstone",
            "azurerm_subnet.monitor",
            "azurerm_virtual_network.capstone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4e564a70-2d22-48d6-b6df-c887ab15ded8/resourceGroups/rg-capstone-yourname/providers/Microsoft.Network/virtualNetworks/vnet-capstone/subnets/snet-web",
            "network_security_group_id": "/subscriptions/4e564a70-2d22-48d6-b6df-c887ab15ded8/resourceGroups/rg-capstone-yourname/providers/Microsoft.Network/networkSecurityGroups/nsg-web",
            "subnet_id": "/subscriptions/4e564a70-2d22-48d6-b6df-c887ab15ded8/resourceGroups/rg-capstone-yourname/providers/Microsoft.Network/virtualNetworks/vnet-capstone/subnets/snet-web"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.web",
            "azurerm_resource_group.capstone",
            "azurerm_subnet.web",
            "azurerm_virtual_network.capstone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "capstone",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "6db0a1e8-4e60-4f4c-b4b7-439a7b1a0ac0",
            "id": "/subscriptions/4e564a70-2d22-48d6-b6df-c887ab15ded8/resourceGroups/rg-capstone-yourname/providers/Microsoft.Network/virtualNetworks/vnet-capstone",
            "location": "eastus",
            "name": "vnet-capstone",
            "resource_group_name": "rg-capstone-yourname",
            "tags": {
              "owner": "sachinb",
              "project": "capstone"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.capstone"
          ]
        }
      ]
    }
  ]
}